# hello_cmake

./: .gitignore  CMakeLists.txt  README.markdown  main.cpp  myqtapp.cpp  myqtapp.h  myqtapp.ui
